<resources>
    <string name="app_name" translatable="false">Ugwo</string>
    <string name="facebook_app_id" translatable="false">1650095188625982</string>

    <!--Navigation Bar Items-->
    <string name="navigation_bar_scanner_item" translatable="false">Scanner</string>
    <string name="navigation_bar_history_item">History</string>
    <string name="navigation_bar_credit_card_item">Cards</string>
    <string name="navigation_bar_settings_item">Settings</string>
    <string name="navigation_bar_commerce_home_item">Home</string>

    <!--BUTTONS-->
    <string name="log_in">Log In</string>
    <string name="sign_in_as_restaurant">Sign In as Restaurant</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_user_information_next">Next</string>
    <string name="action_card_detail_add_card">Add Card</string>
    <string name="action_card_detail_edit_card">Edit Card</string>
    <string name="action_edit_user_save">Save</string>
    <string name="action_split_send_notification">Send Notification</string>
    <string name="action_user">User</string>
    <string name="action_commerce">Commerce</string>
    <string name="action_forgot_password"><u>Forgot Password?</u></string>
    <string name="action_facebook">Sign in with Facebook</string>
    <string name="action_google">Sign in with Google</string>
    <string name="action_no_account">Don’t have an account? <u>Sign up here!</u></string>
    <string name="action_register_commerce">Register new Commerce</string>
    <string name="action_commerce_detail_alone">Alone</string>
    <string name="action_commerce_detail_split">Split</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_change">Change</string>
    <string name="action_payment">Payment</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_generate_qr_code">Generate QR code</string>
    <string name="action_sync_qr_type">Sync</string>
    <string name="action_quickPay_qr_type">Quickpay</string>
    <string name="action_send">Send</string>
    <string name="action_employees">Employees</string>
    <string name="action_go_home_screen">Go back to home screen</string>


    <string name="title_activity_login" translatable="false">Log in</string>
    <string name="title_employee_fragment">Employees</string>
    <string name="title_view_employee_fragment">Employee</string>
    <string name="title_edit_employee_fragment">Edit Employee</string>
    <string name="title_add_employee_fragment">Add Employee</string>
    <string name="title_bank_account_fragment">Bank Account</string>
    <string name="title_cards_list_fragment">Cards</string>
    <string name="title_card_detail_fragment">Card Detail</string>
    <string name="title_add_card_fragment">Add Card</string>
    <string name="title_edit_card_fragment">Edit Card</string>
    <string name="title_tables_fragment">Tables</string>
    <string name="title_commerce_detail_fragment">Commerce</string>

    <!--Prompt-->
    <string name="prompt_name">Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_card_number">Card Number</string>
    <string name="prompt_cvv" translatable="false">ccv</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_exp_date" translatable="false">MM/YY</string>
    <string name="prompt_code">Code</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_commerce_id">Id</string>
    <string name="prompt_account_number">Account Number</string>
    <string name="prompt_commerce_account_name">Account Name</string>
    <string name="prompt_commerce_bank_name">Bank</string>


    <!--Labels-->
    <string name="label_user_information_from_title">Personal Information</string>
    <string name="label_payment_information_from_title">Payment Information</string>
    <string name="label_login_or">OR</string>
    <string name="label_loading_text">Loading</string>
    <string name="label_scanner_fragment_scan">Scan</string>
    <string name="label_payment_option">How would you like to pay the check?</string>
    <string name="label_split_shortage">Shortage</string>
    <string name="label_split_total">Total</string>
    <string name="label_currently_signed_in">Currently signed in:</string>
    <string name="label_change_employee"><u>change employee</u></string>
    <string name="label_choose_qr_type">Choose QR Type</string>
    <string name="label_total_cost">Total cost</string>
    <string name="label_tables_warning_message">If you put 0, the table menu will not appear</string>

    <!--MENU ITEMS-->
    <string name="menu_item_cards_fragment_add_card_item">Add Card</string>
    <string name="menu_item_card_detail_fragment_edit_card_item">Edit Card</string>
    <string name="menu_item_settings_fragment_credit_cars_item">Credit Cards</string>
    <string name="menu_item_settings_fragment_edit_item">Edit User</string>
    <string name="menu_item_scanner_fragment_delete_ticket_item">Delete Ticket</string>
    <string name="menu_item_settings_fragment_sign_out_item">Sign Out</string>
    <string name="menu_item_employee_detail_fragment_edit_employee_item">Edit Employee</string>


    <!-- Error Messages -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_card_number">Invalid card number</string>
    <string name="error_invalid_exp_date_number">Invalid expiration date</string>
    <string name="error_invalid_year">Invalid year</string>
    <string name="error_delete_favorite_card">You cannot delete your favorite card</string>
    <string name="error_invalid_card_type">Card Type is not supported</string>
    <string name="error_email_already_assigned">This email has already been assigned to another user</string>
    <string name="error_photo_field_required">The image is required</string>

    <!--Views titles-->
    <string name="scanner_view_title">Scanner</string>
    <string name="contacts_view_title">Contacts</string>
    <string name="split_view_title">Split</string>
    <string name="payment_view_title">Payment</string>
    <string name="history_view_title">History</string>
    <string name="settings_view_title">Settings</string>
    <string name="edit_password_view_title">Edit Password</string>
    <string name="payment_type_title">Payment Type</string>
    <string name="payment_detail_title">Payment Detail</string>
    <string name="qr_code_generator_title">Generate QR</string>

    <!--Confirmation Titles-->
    <string name="delete_card_title">Delete Card</string>

    <!--Confirmation messages-->
    <string name="delete_card_confirmation_message">Do you want to delete this card?</string>

    <!--HEADERS TITLES-->
    <string-array name="split_fragment_header_titles">
        <item>Me</item>
        <item>Others</item>
    </string-array>
    <string name="tab_notification_fragment_notification">Notification</string>
    <string name="tab_notification_fragment_history">History</string>
    <string name="facebook_login_cancel_message">Facebook Login was cancelled</string>
    <string name="facebook_login_error_message">Facebook Login error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main_commerce" translatable="false">MainCommerceActivity</string>
    <string name="title_activity_payment_commerce_main" translatable="false">PaymentCommerceMainActivity</string>
    <string name="title_activity_main_commerce_settings" translatable="false">MainCommerceSettingsActivity</string>
    <string name="title_activity_employee_main" translatable="false">EmployeeMainActivity</string>
    <string name="title_activity_bank_account_main" translatable="false">BankAccountMainActivity</string>
    <string name="title_activity_sign_in_commerce_main" translatable="false">SignInCommerceMainActivity</string>
    <string name="title_activity_reset_password" translatable="false">ResetPasswordActivity</string>
    <string name="action_reset_password">Reset Password</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
