<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.ezypayinc.ezypay.controllers.login.commerce.SignInBankInformationFragment">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_id_editText_sig_in_commerce_bank_account_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_commerce_id"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/account_number_editText_sig_in_commerce_bank_account_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_account_number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/commerce_account_editText_sig_in_commerce_bank_account_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_commerce_account_name"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/commerce_bank_name_editText_sig_in_commerce_bank_account_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_commerce_bank_name"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/greenEzypayColor"
            android:textColor="@color/white"
            android:id="@+id/save_button_sig_in_commerce_bank_account_fragment"
            android:text="@string/action_edit_user_save"/>

    </LinearLayout>

</LinearLayout>
