<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ezypayinc.ezypay.controllers.login.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal|center"
        android:padding="10dp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:id="@+id/activity_main_btn_signIn"
            android:layout_height="50dp"
            android:background="@drawable/button_green_background"
            android:text="@string/action_user"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"
            tools:ignore="ButtonStyle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/label_login_or"
            android:textColor="@color/colorBackgroundViews"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/activity_main_btn_signInRestaurant"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_green_background"
            android:textColor="@color/white"
            android:text="@string/action_commerce"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>
